Fix error cutoff by stream

--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ body {
     padding: 0;
     width: 60px;
     text-align: center;
-    margin-top: 8px;
+    margin-top: 5px;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
 }
